<resources>
    <string name="app_name">UnBSolidaria</string>

    <!-- Login -->
    <string name="logo">Logo</string>
    <string name="user">Voluntário</string>
    <string name="ass">Associação</string>
    <string name="name_ass">Razão Social</string>
    <string name="name_usr">Nome Completo</string>
    <string name="CPF">CPF</string>
    <string name="CNPJ">CNPJ</string>
    <string name="CPF_CNPJ">CPF/CNPJ</string>
    <string name="website">Site</string>
    <string name="age">Idade</string>
    <string name="matricula">Matrícula</string>
    <string name="gender">Gênero</string>
    <string name="address">Endereço</string>
    <string name="cep">CEP</string>
    <string name="new_account">Criar conta</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_retype_password">Reescreva a Senha</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Não tem conta? Registre-se</string>
    <string name="action_login">Já tem conta? Faça o Login</string>
    <string name="error_invalid_email">Esse email não é válido</string>
    <string name="error_invalid_password">Essa senha é muito pequena</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo necessário</string>
    <string name="error_login_auth">O Login Falhou.</string>
    <string name="permission_rationale">"Permissão de acesso aos contatos necessária para auto-completar
        email."
    </string>
    <string-array name="su_AcountTypeOptions">
        <item>Voluntário</item>
        <item>Associação</item>
    </string-array>

    <!-- Organization-->
    <string name="co_tDateFormat">"%1$d/%2$d/%3$d"</string>
    <!-- Strings related to Opportunities View (ov) -->
    <!-- Changes according to good TextView pratices. See: http://stackoverflow.com/a/33165040-->
    <string name="ov_description">"Descrição: %1$s"</string>
    <string name="ov_org">"Organização: %1$s"</string>
    <string name="ov_local">"Local: %1$s"</string>
    <string name="ov_vagas">"Vagas: %1$s"</string>
    <string name="ov_dateStart">"Data de Início: %1$s"</string>
    <string name="ov_dateEnd">"Data de Término: %1$s"</string>
    

    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_oportunidade_acitivity">OportunidadeActivity</string>
    <string name="action_compartilhar">Compartilhar</string>
    <string name="title_activity_organization_screen">OrganizationScreen</string>
</resources>
